--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.6.13",
+    "framer-motion": "^11.18.1",
     "gsap": "^3.12.5",
     "next": "15.1.2",
     "react": "^19.0.0",
