--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.18.1",
     "gsap": "^3.12.5",
     "next": "15.1.2",
+    "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-floating-whatsapp": "^5.0.8",
